--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
           </div>
         </div>
         <div id="cardInfo">
-          <p id="cardType">Card Type: Unknown</p>
-          <p id="cardValidity">Validity: Invalid</p>
+          <p id="cardValidity">Invalid</p>
         </div>
       </div>
     </div>
